<resources>
    <string name="app_name">Adequacaolgpd</string>
    <string name="LGPD">Lei Geral de Proteção de dados</string>
    <string name="regulamentacao">Regulamentações Pela ANPD</string>
    <string name="glossario">Glossário</string>
    <string name="adequa_o">Adequação</string>
    <string name="capitulo01">CAPÍTULO I \nDISPOSIÇÕES PRELIMINARES</string>
    <string name="capitulo02">CAPÍTULO II\n DO TRATAMENTO DE DADOS PESSOAIS</string>
    <string name="capitulo03">CAPÍTULO III \nDOS DIREITOS DO TITULAR</string>
    <string name="capitulo04">CAPÍTULO IV \nDO TRATAMENTO DE DADOS PESSOAIS PELO PODER PÚBLICO</string>
    <string name="capitulo05">CAPÍTULO V\n DA TRANSFERÊNCIA INTERNACIONAL DE DADOS</string>
    <string name="capitulo06">CAPÍTULO VI \nDOS AGENTES DE TRATAMENTO DE DADOS PESSOAIS</string>
    <string name="capitulo07">CAPÍTULO VII \nDA SEGURANÇA E DAS BOAS PRÁTICAS</string>
    <string name="capitulo08">CAPÍTULO VIII \nDA FISCALIZAÇÃO</string>
    <string name="capitulo09">CAPÍTULO IX \nDA AUTORIDADE NACIONAL DE PROTEÇÃO DE DADOS (ANPD) E DO CONSELHO NACIONAL DE PROTEÇÃO DE DADOS PESSOAIS E DA PRIVACIDADE</string>
    <string name="capitulo10">CAPÍTULO X \nDISPOSIÇÕES FINAIS E TRANSITÓRIAS</string>
    <string name="by_carlos_jos">By: Carlos José</string>
    <string name="txtCapitulo01">Art. 1º Esta Lei dispõe sobre o tratamento de dados pessoais, inclusive nos meios digitais, por pessoa natural ou por pessoa jurídica de direito público ou privado, com o objetivo de proteger os direitos fundamentais de liberdade e de privacidade e o livre desenvolvimento da personalidade da pessoa natural\n\n
Art. 2º A disciplina da proteção de dados pessoais tem como fundamentos: \n
I - o respeito à privacidade; \n
II - a autodeterminação informativa; \n
III - a liberdade de expressão, de informação, de comunicação e de opinião; \n
IV - a inviolabilidade da intimidade, da honra e da imagem; \n
V - o desenvolvimento econômico e tecnológico e a inovação; \n
VI - a livre iniciativa, a livre concorrência e a defesa do \n consumidor; e\n
VII - os direitos humanos, o livre desenvolvimento da personalidade, a dignidade e o exercício da cidadania pelas pessoas naturais. \n\n
Art. 3º Esta Lei aplica-se a qualquer operação de tratamento realizada por pessoa natural ou por pessoa jurídica de direito público ou privado, independentemente do meio, do país de sua sede ou do país onde estejam localizados os dados, desde que: \n\n
I - a operação de tratamento seja realizada no território nacional; \n
II - a atividade de tratamento tenha por objetivo a oferta ou o fornecimento de bens ou serviços ou o tratamento de dados de indivíduos localizados no território nacional; \n
III - os dados pessoais objeto do tratamento tenha sido coletados no território nacional. \n
§ 1º Consideram-se coletados no território nacional os dados pessoais cujo titular nele se encontre no momento da coleta. \n
§ 2º Excetua-se do disposto no inciso I deste artigo o tratamento de dados previsto no inciso IV do caput do art. 4º desta Lei. \n\n
Art. 4º Esta Lei não se aplica ao tratamento de dados pessoais: \n
I - Realizado por pessoa natural para fins exclusivamente \n particulares e não econômicos;
II - Realizado para fins exclusivamente: \n
a) jornalístico e artísticos; ou\n
b) acadêmicos, aplicando-se a esta hipótese os arts. 7º e 11 desta Lei; \n
III - realizado para fins exclusivos de: \n
a) segurança pública; \n
b) defesa nacional; \n
c) segurança do Estado; ou\n
d) atividades de investigação e repressão de infrações penais; ou\n
IV - Provenientes de fora do território nacional e que não sejam objeto de comunicação, uso compartilhado de dados com agentes de tratamento brasileiros ou objeto de transferência internacional de dados com outro país que não o de proveniência, desde que o país de proveniência proporcione grau de proteção de dados pessoais adequado ao previsto nesta Lei. \n
§ 1º O tratamento de dados pessoais previsto no inciso III será regido por legislação específica, que deverá prever medidas proporcionais e estritamente necessárias ao atendimento do interesse público, observados o devido processo legal, os princípios gerais de proteção e os direitos do titular previstos nesta Lei. \n
§ 2º É vedado o tratamento dos dados a que se refere o inciso III do caput deste artigo por pessoa de direito privado, exceto em procedimentos sob tutela de pessoa jurídica de direito público, que serão objeto de informe específico à autoridade nacional e que deverão observar a limitação imposta no § 4º deste artigo. \n
§ 3º A autoridade nacional emitirá opiniões técnicas ou recomendações referentes às exceções previstas no inciso III do caput deste artigo e deverá solicitar aos responsáveis relatórios de impacto à proteção de dados pessoais. \n
§ 4º Em nenhum caso a totalidade dos dados pessoais de banco de dados de que trata o inciso III do caput deste artigo poderá ser tratada por pessoa de direito privado. \n\n
Art. 5º Para os fins desta Lei, considera-se: \n
I - dado pessoal: informação relacionada a pessoa natural identificada ou identificável; \n
II - dado pessoal sensível: dado pessoal sobre origem racial ou étnica, convicção religiosa, opinião política, filiação a sindicato ou a organização de caráter religioso, filosófico ou político, dado referente à saúde ou à vida sexual, dado genético ou biométrico, quando vinculado a uma pessoa natural; \n
III - dado anonimizado: dado relativo a titular que não possa ser identificado, considerando a utilização de meios técnicos razoáveis e disponíveis na ocasião de seu tratamento; \n
IV - banco de dados: conjunto estruturado de dados pessoais, estabelecido em um ou em vários locais, em suporte eletrônico ou físico; \n
V - titular: pessoa natural a quem se referem os dados pessoais que são objeto de tratamento; \n
VI - controlador: pessoa natural ou jurídica, de direito público ou privado, a quem competem as decisões referentes ao tratamento de dados pessoais; \n
VII - operador: pessoa natural ou jurídica, de direito público ou privado, que realiza o tratamento de dados pessoais em nome do controlador; \n
VIII - encarregado: pessoa natural, indicada pelo controlador, que atua como canal de comunicação entre o controlador e os titulares e a autoridade nacional; \n
IX - agentes de tratamento: o controlador e o operador; \n
X - tratamento: toda operação realizada com dados pessoais, como as que se referem a coleta, produção, recepção, classificação, utilização, acesso, reprodução, transmissão, distribuição, processamento, arquivamento, armazenamento, eliminação, avaliação ou controle da informação, modificação, comunicação, transferência, difusão ou extração; \n
XI - anonimização: utilização de meios técnicos razoáveis e disponíveis no momento do tratamento, por meio dos quais um dado perde a possibilidade de associação, direta ou indireta, a um indivíduo; \n
XII - consentimento: manifestação livre, informada e inequívoca pela qual o titular concorda com o tratamento de seus dados pessoais para uma finalidade determinada; \n
XIII - bloqueio: suspensão temporária de qualquer operação de tratamento, mediante guarda do dado pessoal ou do banco de dados; \n
XIV - eliminação: exclusão de dado ou de conjunto de dados armazenados em banco de dados, independentemente do procedimento empregado; \n
XV - transferência internacional de dados: transferência de dados pessoais para país estrangeiro ou organismo internacional do qual o país seja membro; \n
XVI - uso compartilhado de dados: comunicação, difusão, transferência internacional, interconexão de dados pessoais ou tratamento compartilhado de bancos de dados pessoais por órgãos e entidades públicos no cumprimento de suas competências legais, ou entre esses e entes privados, reciprocamente, com autorização específica, para uma ou mais modalidades de tratamento permitidas por esses entes públicos, ou entre entes privados; \n
XVII - relatório de impacto à proteção de dados pessoais: documentação do controlador que contém a descrição dos processos de tratamento de dados pessoais que podem gerar riscos às liberdades civis e aos direitos fundamentais, bem como medidas, salvaguardas e mecanismos de mitigação de risco; \n
XVIII - órgão de pesquisa: órgão ou entidade da administração pública direta ou indireta ou pessoa jurídica de direito privado sem fins lucrativos legalmente constituída sob as leis brasileiras, com sede e foro no País, que inclua em sua missão institucional ou em seu objetivo social ou estatutário a pesquisa básica ou aplicada de caráter histórico, científico, tecnológico ou estatístico; \n
XIX - autoridade nacional: órgão da administração pública indireta responsável por zelar, implementar e fiscalizar o cumprimento desta Lei. \n\n
Art. 6º As atividades de tratamento de dados pessoais deverão observar a boafé e os seguintes princípios: \n
I - finalidade: realização do tratamento para propósitos legítimos, específicos, explícitos e informados ao titular, sem possibilidade de tratamento posterior de forma incompatível com essas finalidades; \n
II - adequação: compatibilidade do tratamento com as finalidades informadas ao titular, de acordo com o contexto do tratamento; \n
III - necessidade: limitação do tratamento ao mínimo necessário para a realização de suas finalidades, com abrangência dos dados pertinentes, proporcionais e não excessivos em relação às finalidades do tratamento de dados; \n
IV - livre acesso: garantia, aos titulares, de consulta facilitada e gratuita sobre a forma e a duração do tratamento, bem como sobre a integralidade de seus dados pessoais; \n
V - qualidade dos dados: garantia, aos titulares, de exatidão, clareza, relevância e atualização dos dados, de acordo com a necessidade e para o cumprimento da finalidade de seu tratamento; \n
VI - transparência: garantia, aos titulares, de informações claras, precisas e facilmente acessíveis sobre a realização do tratamento e os respectivos agentes de tratamento, observados os segredos comercial e industrial; \n
VII - segurança: utilização de medidas técnicas e administrativas aptas a proteger os dados pessoais de acessos não autorizados e de situações acidentais ou ilícitas de destruição, perda, alteração, comunicação ou difusão; \n
VIII - prevenção: adoção de medidas para prevenir a ocorrência de danos em virtude do tratamento de dados pessoais; \n
IX - não discriminação: impossibilidade de realização do tratamento para fins discriminatórios ilícitos ou abusivos; \n
X - responsabilização e prestação de contas: demonstração, pelo agente, da adoção de medidas eficazes e capazes de comprovar a observância e o cumprimento das normas de proteção de dados pessoais e, inclusive, da eficácia dessas medidas. \n\n
</string>
</resources>